--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "element-ui": "^1.0.0",
-    "vue": "^2.0.5"
+    "vue": "^2.0.5",
+    "vue-router":"^2.1.0",
+    "vue-resource":"^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
